# convicts-dilemma

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: dashboard.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: is_rate.sql
dbt/models/: sources.yml
dbt/models/gold/: behavioral_drift.sql  cross_run_summary.sql  forgiveness_index.sql  matchup_matrix.sql  run_catalog.sql  schema.yml  tournament_summary.sql
docs/: data_scientist_guide.md
notebooks/: analysis.ipynb
scripts/: populate_lake.py
src/convicts_dilemma/: __init__.py  config.py
src/convicts_dilemma/agents/: __init__.py  ollama_agent.py
src/convicts_dilemma/defs/: __init__.py  assets.py  dbt.py
src/convicts_dilemma/pipeline/: __init__.py  bronze.py  silver.py
src/convicts_dilemma/simulation/: __init__.py  engine.py  tournament.py
src/convicts_dilemma/strategies/: __init__.py  base.py  classic.py
tests/: conftest.py  test_agents.py  test_engine.py  test_gold.py  test_silver.py  test_strategies.py  test_tournament_and_bronze.py
